# persistent_l2_cache_cuda

./: .gitignore  CMakeLists.txt  LICENSE  README.md
gpu/: copy.cu  copy.cuh  cuda_utils.cu  cuda_utils.cuh  data_resetting.cu  data_resetting.cuh  kernel.cu  kernel.cuh
src/: main_copy.cu  main_data_resetting.cu  main_data_resetting_persistence.cu  main_stream.cu  main_stream_and_persistent.cu  main_stream_and_persistent_batched.cu
utils/: verify_result.cpp  verify_result.hpp
